# Soltra

./: .cursorrules  .gitattributes  .gitignore  DEPLOYMENT.md  README.md  SETUP.md  start-local.cmd  start-local.ps1
docs/: architecture.md  development_history.md  frontend_plan.md  full_development_history.md  hardware_progress.md  hivemq_setup.md  roadmap.md  software_progress.md  voice_progress.md  website_progress.md
experiments/persona-3-reload-pause-menu/: .gitignore  README.md  README_ru.md  icon.svg.import  project.godot
experiments/persona-quickshell/: .gitignore  AppDrawer.qml  Capsule.qml  Colors.qml  Datee.qml  Depth.qml  DwlService.qml  DwlWindows.qml  Mousemover.qml  Mousemoverold.qml  Mousemoverwlroots.qml  P3rpause.qml  README.md  Searchapp.qml  StatsDetail.qml  Triangle.qml  VolumeOsd.qml  shell.qml
experiments/persona-quickshell/modules/HyprlandMonitor/: CMakeLists.txt  hyprlandmonitor.cpp  hyprlandmonitor.hpp
hardware/: soltra_config.h
hardware/soltra-master-hub/: soltra_master_hub.ino
hardware/soltra-motor-controller/: soltra_motor_controller.ino
hardware/soltra-sensor-node/: soltra_sensor_node.ino
hardware/soltra-sensor-node-pcb/: README.md  soltra_sensor_node_pcb.ino
hardware/soltra-sensor-node-test/: soltra_sensor_node_test.ino
hardware/uv-test/: uv_test.ino
raspberry_pi_deploy/: setup_pi.sh
raspberry_pi_deploy/soltra-cv/: sun_tracker.py
software/: MODULES.md
software/soltra-dashboard/: .vercelignore  index.html  inspect_glb.js  (+2 more)
tools/: extract_history.py  run_vb.bat  run_voicebox_setup.ps1  setup_voicebox.ps1
(+283 files in other folders)
